--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,14 @@ winreg  = "0.50.0"
 msgbox = "0.7.0"
 magic-crypt = "3.1.12"
 winapi = "0.3.9"
+libloading = "*"
+tray-item = "0.8.0"
+cbindgen = "*"
+libc = "*"
+# tray-icon = "0.5.1"
 
 [build-dependencies]
 fl2rust = "0.5.13"
 winres = "0.1.12"
 winapi = "0.3.9"
+# windres = "*"
