--- a/pockelib/pockelib.vcxproj
+++ b/pockelib/pockelib.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="pockelib.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="main.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
