更新界面 添加托盘 窗口图标 使用cpp dll 进行功能扩展

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,9 @@
         "regex": "cpp",
         "filesystem": "cpp",
         "string": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "codecvt": "cpp",
+        "xlocale": "cpp",
+        "system_error": "cpp"
     }
 }
