--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-fltk = { version = "^1.3", features = ["fltk-bundled"] }
+fltk = { version = "1.4.3", features = ["fltk-bundled"] }
 serde_json = "1.0.96"
 # lazy_static = "1.4.0"
 regex = "1.7.3"
@@ -19,6 +19,8 @@ libloading = "*"
 tray-item = "0.8.0"
 cbindgen = "*"
 libc = "*"
+# rust-embed = "6.6.1"
+
 # tray-icon = "0.5.1"
 
 [build-dependencies]
